--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -29,6 +29,202 @@
 
 \chapter{Model of Computation}
 
+The model of computation comprises three dependent models of computation, based on that of Matthews and Findler (((CITATION))). The Haskell and ML models are based on System F, extended with a fixed-point operation. The Scheme model is based on lambda calculus, having a simple type system to ensure no free variables, and extended with type predicates. All models have natural numbers, arithmetic, conditions, lists, and errors. The Haskell model has a call-by-name evaluation strategy, and ML and Scheme have call-by-value evaluation strategies. The models are presented with grammars and operational semantics in the style of (((CITATION))) and typing rules.
+
+The Haskell model has a (((STRICT?))) subset of the strictness points of the ML and Scheme models, and hence forces the reduction of fewer expressions where those expressions are not used. When a function from the Haskell model is converted to a function in the ML or Scheme models, this same subset must be preserved or the meaning of the function will change and parametricity will not hold. Concretely, this means that function arguments and list construction operands must not be reduced. Thus evaluation contexts for the ML and Scheme models are made aware of whether Haskell language boundary guards are in these places, and if so, to make them irreducible.
+
+Since Haskell language boundary guards are forced in some places but not others, they must be considered a value sometimes, but not others. Thus there are two kinds of values: all values, called unforced values, which include imported Haskell expressions, and forced values, which exclude imported Haskell expressions. Unforced values occur in the evaluation contexts and reduction rules where Haskell importations should not be forced, namely function arguments and list construction operands, and forced values occur everywhere else a value is required.
+
+Evaluation contexts are split into two: forced, \varconf, and unforced, \varconu. Only forced evaluation contexts can reduce anything, including Haskell importations, and unforced evaluation contexts restrict where expressions are forced. Where \varconu appears in an evaluation context, any Haskell importation matching that expression is not forced because only \varconf can reduce it.
+
+Since the Haskell and ML models have their own types, type abstractions from one imported into the other cannot be easily converted, because any type the conversion is applied to cannot be substituted into the other language. Instead, and like the importation of parametric polymorphic types into the Scheme model, the lump type is subsituted into the imported type abstraction, and a lump equality relation, (((LUMP EQUALITY REL))) asserts that corresponding parts of the inner and outer types of the importation must be equal, or one of them must be a lump.
+
+\begin{figure}[tb]
+\centering
+$zeroes = \expfix{(\expfabss{\varvarh}{\tylist{\tynum}}{\expcons{\expnum{0}}{\varvarh}})}$
+
+\begin{tabular}{lll}
+% (hs ({N}->{N}) (\x.x)) zeroes
+&
+\expfapp
+{
+	(
+	\exphs
+	{
+		(
+		\csfun
+		{
+			\cslist
+			{
+				\csnum
+			}
+		}
+		{
+			\cslist
+			{
+				\csnum
+			}
+		}
+		)
+	}
+	{
+		(
+		\expfabsd
+		{
+			\first
+			{
+				\varvars
+			}
+		}
+		{
+			\first
+			{
+				\varvars
+			}
+		}
+		)
+	}
+	)
+}
+{
+	\formvar
+	{
+		zeroes
+	}
+}
+& \red \\
+% (\x:{N}.hs {N} ((\x.x) (sh {N} x))) zeroes
+&
+\expfapp
+{
+	(
+	\expfabss
+	{
+		\second
+		{
+			\varvarh
+		}
+	}
+	{
+		\tylist
+		{
+			\tynum
+		}
+	}
+	{
+		\exphs
+		{
+			\cslist
+			{
+				\csnum
+			}
+		}
+		{
+			(
+			\expfapp
+			{
+				(
+				\expfabsd
+				{
+					\first
+					{
+						\varvars
+					}
+				}
+				{
+					\first
+					{
+						\varvars
+					}
+				}
+				)
+			}
+			{
+				(
+				\expsh
+				{
+					\cslist
+					{
+						\csnum
+					}
+				}
+				{
+					\second
+					{
+						\varvarh
+					}
+				}
+				)
+			}
+			)
+		}
+	}
+	)
+}
+{
+	\formvar
+	{
+		zeroes
+	}
+}
+& \red \\
+% hs {N} ((\x.x) (sh {N} zeroes))
+(1) &
+\exphs
+{
+	\cslist
+	{
+		\csnum
+	}
+}
+{
+	(
+	\expfapp
+	{
+		(
+		\expfabsd
+		{
+			\first
+			{
+				\varvars
+			}
+		}
+		{
+			\first
+			{
+				\varvars
+			}
+		}
+		)
+	}
+	{
+		(
+		\expsh
+		{
+			\cslist
+			{
+				\csnum
+			}
+		}
+		{
+			\formvar
+			{
+				zeroes
+			}
+		}
+		)
+	}
+	)
+}
+& \red \\
+
+\end{tabular}
+\caption{Unforced argument and list tail prevent a divergence.}
+\end{figure}
+
+
+------
+
 The model of computation is based on that of Matthews and Findler \ref{matthews07}. Their model consists of two simple models, one representing ML and the other Scheme.
 
 The ML model is a simply-typed lambda calculus extended with parametric polymorphism called System F. The substitution semantics by which type abstractions are applied means the ML model has parametricity, which is a property that ensures that programs behave the same regardless of the types applied to by type abstractions.  The ML model introduces new expressions, type abstractions and type applications, to express parametric polymorphism, and new types, type variables and forall types, for them. The ML model uses an eager evaluation strategy.
