Moved the unforced points figure to figures/unforced.tex.

--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -39,377 +39,9 @@ Evaluation contexts are split into two: forced, \varconf, and unforced, \varconu
 
 Since the Haskell and ML models have their own types, type abstractions from one imported into the other cannot be easily converted, because any type the conversion is applied to cannot be substituted into the other language. Instead, and like the importation of parametric polymorphic types into the Scheme model, the lump type is subsituted into the imported type abstraction, and a lump equality relation, (((LUMP EQUALITY REL))) asserts that corresponding parts of the inner and outer types of the importation must be equal, or one of them must be a lump.
 
-\begin{figure}[tb]
-\centering
-$zeroes = \expfix{(\expfabss{\varvarh}{\tylist{\tynum}}{\expcons{\expnum{0}}{\varvarh}})}$
+\ref{figunf}
 
-\begin{tabular}{lll}
-% (hs ({N}->{N}) (\x.x)) zeroes
-\expfapp
-{
-	(
-	\exphs
-	{
-		(
-		\csfun
-		{
-			\cslist
-			{
-				\csnum
-			}
-		}
-		{
-			\cslist
-			{
-				\csnum
-			}
-		}
-		)
-	}
-	{
-		(
-		\expfabsd
-		{
-			\first
-			{
-				\varvars
-			}
-		}
-		{
-			\first
-			{
-				\varvars
-			}
-		}
-		)
-	}
-	)
-}
-{
-	\formvar
-	{
-		zeroes
-	}
-}
-& \red \\
-% (\x:{N}.hs {N} ((\x.x) (sh {N} x))) zeroes
-\expfapp
-{
-	(
-	\expfabss
-	{
-		\second
-		{
-			\varvarh
-		}
-	}
-	{
-		\tylist
-		{
-			\tynum
-		}
-	}
-	{
-		\exphs
-		{
-			\cslist
-			{
-				\csnum
-			}
-		}
-		{
-			(
-			\expfapp
-			{
-				(
-				\expfabsd
-				{
-					\first
-					{
-						\varvars
-					}
-				}
-				{
-					\first
-					{
-						\varvars
-					}
-				}
-				)
-			}
-			{
-				(
-				\expsh
-				{
-					\cslist
-					{
-						\csnum
-					}
-				}
-				{
-					\second
-					{
-						\varvarh
-					}
-				}
-				)
-			}
-			)
-		}
-	}
-	)
-}
-{
-	\formvar
-	{
-		zeroes
-	}
-}
-& \red \\
-% hs {N} ((\x.x) (sh {N} zeroes))
-\exphs
-{
-	\cslist
-	{
-		\csnum
-	}
-}
-{
-	(
-	\expfapp
-	{
-		(
-		\expfabsd
-		{
-			\first
-			{
-				\varvars
-			}
-		}
-		{
-			\first
-			{
-				\varvars
-			}
-		}
-		)
-	}
-	{
-		(
-		\expsh
-		{
-			\cslist
-			{
-				\csnum
-			}
-		}
-		{
-			\formvar
-			{
-				zeroes
-			}
-		}
-		)
-	}
-	)
-}
-& \red \\
-% hs {N} (sh {N} zeroes)
-\exphs
-{
-	\cslist
-	{
-		\csnum
-	}
-}
-{
-	(
-	\expsh
-	{
-		\cslist
-		{
-			\csnum
-		}
-	}
-	{
-		\formvar
-		{
-			zeroes
-		}
-	}
-	)
-}
-& \red \\
-% hs {N} (sh {N} (cons 0 zeroes))
-\exphs
-{
-	\cslist
-	{
-		\csnum
-	}
-}
-{
-	(
-	\expsh
-	{
-		\cslist
-		{
-			\csnum
-		}
-	}
-	{
-		(
-		\expcons
-		{
-			\expnum
-			{
-				0
-			}
-		}
-		{
-			\formvar
-			{
-				zeroes
-			}
-		}
-		)
-	}
-	)
-}
-& \red \\
-% hs {N} (cons (sh N 0) (sh {N} zeroes))
-\exphs
-{
-	\cslist
-	{
-		\csnum
-	}
-}
-{
-	(
-	\expcons
-	{
-		(
-		\expsh
-		{
-			\csnum
-		}
-		{
-			\expnum
-			{
-				0
-			}
-		}
-		)
-	}
-	{
-		(
-		\expsh
-		{
-			\cslist
-			{
-				\csnum
-			}
-		}
-		{
-			\formvar
-			{
-				zeroes
-			}
-		}
-		)
-	}
-	)
-}
-& \red \\
-% hs {N} (cons 0 (sh {N} zeroes))
-\exphs
-{
-	\cslist
-	{
-		\csnum
-	}
-}
-{
-	(
-	\expcons
-	{
-		\expnum
-		{
-			0
-		}
-	}
-	{
-		(
-		\expsh
-		{
-			\cslist
-			{
-				\csnum
-			}
-		}
-		{
-			\formvar
-			{
-				zeroes
-			}
-		}
-		)
-	}
-	)
-}
-& \red \\
-% cons (hs N 0) (hs {N} (sh {N} zeroes))
-\expcons
-{
-	(
-	\exphs
-	{
-		\csnum
-	}
-	{
-		\expnum
-		{
-			0
-		}
-	}
-	)
-}
-{
-	(
-	\exphs
-	{
-		\cslist
-		{
-			\csnum
-		}
-	}
-	{
-		(
-		\expsh
-		{
-			\cslist
-			{
-				\csnum
-			}
-		}
-		{
-			\formvar
-			{
-				zeroes
-			}
-		}
-		)
-	}
-	)
-}
-& \\
-		
-
-\end{tabular}
-\caption{Function and list conversions with unforced points.}
-\end{figure}
-
+\input{figures/unforced.tex}
 
 ------
 
