--- a/model/haskell/operational-semantics/ml.tex
+++ b/model/haskell/operational-semantics/ml.tex
@@ -120,6 +120,7 @@ $(\vartyh \neq \tylump)$
 \newcommand{\oshmtabs}{\redruleh{\oshmtabsl}{\oshmtabsr}}
 
 \begin{figure}[p]
+\onehalfspacing
 \centering
 \begin{tabular}{l}
 
