--- a/chapter-1.tex
+++ b/chapter-1.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction}
+\section{Introduction}
 
 The complexities of software interoperation in part engender the proverbial reinvention of the wheel.  Programmers forgo preexisting solutions to problems where interoperation proves too cumbersome; they reimplement software components, rather than reuse them.  Disparate programming language features complicate the conversion of values exchanged between components of different languages.  Resolving language incompatibilities transparently at boundaries between component languages facilitates interoperation by unburdening programmers.  This paper explores and resolves two such incompatibilities with a model of computation and then proves its type soundness and describes its implementation.
 
