--- a/figures/unforced.tex
+++ b/figures/unforced.tex
@@ -1,4 +1,5 @@
 \begin{figure}[tb]
+\onehalfspacing
 \centering
 $zeroes = \expfix{(\expfabss{\varvarh}{\tylist{\tynum}}{\expcons{\expnum{0}}{\varvarh}})}$
 
