Renamed grammar.tex to syntax.tex. Changed grammar to syntax. Added 'fig' prefix to figure labels.

--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -85,7 +85,7 @@ TODO
 
 \clearpage
 
-\input{model/haskell/grammar.tex}
+\input{model/haskell/syntax.tex}
 
 \clearpage
 
@@ -105,7 +105,7 @@ TODO
 
 \clearpage
 
-\input{model/ml/grammar.tex}
+\input{model/ml/syntax.tex}
 
 \clearpage
 
@@ -125,7 +125,7 @@ TODO
 
 \clearpage
 
-\input{model/scheme/grammar.tex}
+\input{model/scheme/syntax.tex}
 
 \clearpage
 
