--- a/model/equality.tex
+++ b/model/equality.tex
@@ -15,5 +15,5 @@ $\vartym \eq \tylump$
 $\vartyh = \vartym \Rightarrow \vartyh \symlumpeq \vartym$
 
 \caption{Lump equality relation}
-\label{figeq}
+\label{figequality}
 \end{figure}
