--- a/model/haskell/operational-semantics/ml.tex
+++ b/model/haskell/operational-semantics/ml.tex
@@ -138,5 +138,5 @@ $(\vartyh \neq \tylump)$
 
 \end{tabular}
 \caption{Haskell-ML operational semantics}
-\label{hmos}
+\label{fighmos}
 \end{figure}
