--- a/model/haskell/operational-semantics/scheme.tex
+++ b/model/haskell/operational-semantics/scheme.tex
@@ -71,5 +71,5 @@ $(\varvalfs \neq \expsh{(\csbrand{\varbrand}{\vartyh})}{\varexph})$ \\
 
 \end{tabular}
 \caption{Haskell-Scheme operational semantics}
-\label{hsos}
+\label{fighsos}
 \end{figure}
