--- a/model/haskell/typing-rules.tex
+++ b/model/haskell/typing-rules.tex
@@ -125,5 +125,5 @@
 {\judeh{\env}{\exphm{\vartyh}{\first{\vartym}}{\varexpm}}{\vartyh}}
 \]
 \caption{Haskell typing rules}
-\label{htr}
+\label{fightr}
 \end{figure}
