--- a/model/ml/operational-semantics/haskell.tex
+++ b/model/ml/operational-semantics/haskell.tex
@@ -58,5 +58,5 @@ $(\vartym \neq \tylump)$ \\
 
 \end{tabular}
 \caption{ML-Haskell operational semantics}
-\label{mhos}
+\label{figmhos}
 \end{figure}
