--- a/model/ml/operational-semantics/scheme.tex
+++ b/model/ml/operational-semantics/scheme.tex
@@ -74,5 +74,5 @@ $(\varvalfs \neq \expnum{\varnum})$ \\
 
 \end{tabular}
 \caption{ML-Scheme operational semantics}
-\label{msos}
+\label{figmsos}
 \end{figure}
