--- a/model/ml/typing-rules.tex
+++ b/model/ml/typing-rules.tex
@@ -125,5 +125,5 @@
 {\judem{\env}{\expmh{\vartym}{\vartyh}{\first{\varexph}}}{\vartym}}
 \]
 \caption{ML typing rules}
-\label{mtr}
+\label{figmtr}
 \end{figure}
