--- a/model/scheme/operational-semantics/scheme.tex
+++ b/model/scheme/operational-semantics/scheme.tex
@@ -146,5 +146,5 @@ $(\varvalfs \neq \expnum{\varnum})$ \\
 
 \end{tabular}
 \caption{Scheme operational semantics}
-\label{sos}
+\label{figsos}
 \end{figure}
