--- a/macros.tex
+++ b/macros.tex
@@ -78,6 +78,7 @@
 \newcommand{\varconum}{\ensuremath{\varconu\langm}\xspace}
 \newcommand{\varconus}{\ensuremath{\varconu\langs}\xspace}
 
+\newcommand{\varcs}{\ensuremath{\symcs}\xspace}
 \newcommand{\varcsh}{\ensuremath{\symcs\langh}\xspace}
 \newcommand{\varcsm}{\ensuremath{\symcs\langm}\xspace}
 
@@ -161,6 +162,7 @@
 
 \newcommand{\cslump}{\ensuremath{\formsym{\symlump}}\xspace}
 \newcommand{\csnum}{\ensuremath{\formsym{\symnat}}\xspace}
+\newcommand{\csvar}{\ensuremath{\symcsvar}\xspace}
 \newcommand{\csvarh}{\ensuremath{\symcsvar\langh}\xspace}
 \newcommand{\csvarm}{\ensuremath{\symcsvar\langm}\xspace}
 \newcommand{\cslist}[1]{\ensuremath{\synlist{#1}}\xspace}
@@ -185,7 +187,7 @@
 \newcommand{\judts}[2]{\judt{#1}{\symjuds}{#2}}
 
 \newcommand{\env}{\ensuremath{\symenv}\xspace}
-\newcommand{\envempty}{\ensuremath{\symempty}}
+%\newcommand{\envempty}{\ensuremath{\symempty}}
 \newcommand{\envexte}[3]{\ensuremath{#1 \symext #2 \symhasty #3}}
 \newcommand{\envextt}[2]{\ensuremath{#1 \symext #2}}
 
