Put spaces beside ---. Put 'List' in hd and tl syntax names in figsyntax.

--- a/model/syntax.tex
+++ b/model/syntax.tex
@@ -21,12 +21,12 @@
 \tyfun{\varty}{\varty} & Function abstraction \\
 \csfun{\varcs}{\varcs} & Function abstraction \\
 \expfapp{\varexp}{\varexp} & Function application \\
-\exphd{\varexp} & Head \\
 \tylist{\varty} & List \\
 \cslist{\varcs} & List \\
 \expcons{\varexp}{\varexp} & List construction \\
+\exphd{\varexp} & List head \\
+\exptl{\varexp} & List tail \\
 \expsub{\varexp}{\varexp} & Subtraction \\
-\exptl{\varexp} & Tail \\
 \exptabs{\tyvar}{\varexp} & Type abstraction \\
 \exptapp{\varexp}{\varty} & Type application \\
 \exppfun{\varexps} & Value predicate \\
