--- a/model/syntax.tex
+++ b/model/syntax.tex
@@ -7,25 +7,23 @@
 \textbf{Syntax} & \textbf{Name} \\
 
 \expadd{\varexp}{\varexp} & Addition \\
-\csbrand{\varbrand}{\varty} & Branded type \\
-\expif{\varexp}{\varexp}{\varexp} & Condition \\
-\expnils{\varty} & Empty list \\
+\expif{\varexp}{\varexp}{\varexp} & Condition \\\expnils{\varty} & Empty list \\
 \expnild & Empty list \\
 \expwrongs{\varty}{\formvar{string}} & Error \\
 \expwrongd{\formvar{string}} & Error \\
 \expfix{\varexp} & Fixed-point operation \\
-\tyfor{\tyvar}{\varty} & Forall \\
-\csfor{\csvar}{\varcs} & Forall \\
 \expfabss{\varvar}{\varty}{\varexp} & Function abstraction \\
 \expfabsd{\varvars}{\varexps} & Function abstraction \\
-\tyfun{\varty}{\varty} & Function abstraction \\
-\csfun{\varcs}{\varcs} & Function abstraction \\
 \expfapp{\varexp}{\varexp} & Function application \\
-\tylist{\varty} & List \\
-\cslist{\varcs} & List \\
+\exphm{\vartyh}{\vartym}{\varexpm} & Haskell-ML guard \\
+\exphs{\varcsh}{\varexps} & Haskell-Scheme guard \\
 \expcons{\varexp}{\varexp} & List construction \\
 \exphd{\varexp} & List head \\
 \exptl{\varexp} & List tail \\
+\expmh{\vartym}{\vartyh}{\varexph} & ML-Haskell guard \\
+\expms{\varcsm}{\varexps} & ML-Scheme guard \\
+\expsh{\varcsh}{\varexph} & Scheme-Haskell guard \\
+\expsm{\varcsm}{\varexpm} & Scheme-ML guard \\
 \expsub{\varexp}{\varexp} & Subtraction \\
 \exptabs{\tyvar}{\varexp} & Type abstraction \\
 \exptapp{\varexp}{\varty} & Type application \\
@@ -33,6 +31,28 @@
 \expplist{\varexps} & Value predicate \\
 \exppnull{\varexp} & Value predicate \\
 \exppnum{\varexps} & Value predicate \\
+
+\end{tabular}
+
+\caption{Syntax names.}
+\label{figsyntax}
+\end{figure}
+
+\begin{figure}[p]
+
+\onehalfspacing
+\centering
+\begin{tabular}{rl}
+
+\textbf{Syntax} & \textbf{Name} \\
+
+\csbrand{\varbrand}{\varty} & Branded type \\
+\tyfor{\tyvar}{\varty} & Forall \\
+\csfor{\csvar}{\varcs} & Forall \\
+\tyfun{\varty}{\varty} & Function abstraction \\
+\csfun{\varcs}{\varcs} & Function abstraction \\
+\tylist{\varty} & List \\
+\cslist{\varcs} & List \\
 
 \end{tabular}
 
