Rewrote the conclusion.

--- a/chapter-3.tex
+++ b/chapter-3.tex
@@ -1,3 +1,7 @@
 \section{Conclusion}
 
-This work resolved three language incompatibilities in a system of interoperation for three diverse languages.  It resolved incompatible type systems with contracts for higher-order functions and lump types.  It resolved incompatible support for parametricity with label types.  It resolved incompatible evaluation strategies with delayed conversions for list constructions.  It defined a model of computation that can express interoperation where the aforementioned incompatibilities arise and resolve them, provided a proof of its type soundness, and described an implementation of it that supported additional language features.
+Evaluation strategy incompatibilities can be resolved transparently at language boundaries. Where two interoperable languages do not share a strictness point, if an expression crosses from the language without the strictness point to the one with, then the conversion of the expression must be delayed until the value is needed. Otherwise, the expression may diverge or reduce to an error, and thus reduce differently due to the interoperation.
+
+Statically-typed languages with parametric polymorphism can interoperate through lump equality. Normally, expressions have equivalent types on both sides of the language boundary, but in the case of type abstractions, the outer type argument cannot be substituted into the inner language's type abstraction. A lump is substituted into the inner language's type of the guard and the applied to the type abstraction, and the lump equality relation allows for a notion of type equivalence where the substituted lump type can match the outer type instantiated for the outer type variable.
+
+In an interoperable system of $n$ languages, there must be $n * (n - 1)$ language mappings, two for every pair of languages to convert to and from one another. As this model of computation demonstrates, the geometric growth of the interoperation model is almost too much to manage. In general, for a sizable group of languages, this approach of interface bridging is unmaintainable. A better approach is to make language mappings between a language and only one other language that is most similar to it. As long as there is a spanning tree for the graph of languages, the number of languages mappings in the best case is $n - 1$, linear growth.
