Changed to show all citations. Added Rice citation.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,40 +1,16 @@
-@article{benton05,
-  author = {Nick Benton},
-  title = {Embedded interpreters},
-  journal = {J. Funct. Program.},
-  volume = {15},
-  number = {4},
-  year = {2005},
-  issn = {0956-7968},
-  pages = {503--542},
-  doi = {http://dx.doi.org/10.1017/S0956796804005398},
-  publisher = {Cambridge University Press},
-  address = {New York, NY, USA},
+@article{
+  rice53,
+  author = {H. G. Rice},
+  title = {Classes of Recursively Enumerable Sets and Their Decision Problems},
+  journal = {Transactions of the American Mathematical Society},
+  volume = {74},
+  number = {2},
+  year = {1953},
+  pages = {358--366}
 }
 
-@article{blume04,
-  author = {Matthias Blume and David McAllester},
-  title = {A sound (and complete) model of contracts},
-  journal = {SIGPLAN Not.},
-  volume = {39},
-  number = {9},
-  year = {2004},
-  issn = {0362-1340},
-  pages = {189--200},
-  doi = {http://doi.acm.org/10.1145/1016848.1016876},
-  publisher = {ACM},
-  address = {New York, NY, USA},
-}
-
-@manual{ecma06,
-  title = {Common Language Infrastructure (CLI)},
-  organization = {ECMA},
-  edition = {4th},
-  month = {June},
-  year = {2006},
-}
-
-@article{findler02,
+@article{
+  findler02,
   author = {Robert Bruce Findler and Matthias Felleisen},
   title = {Contracts for higher-order functions},
   journal = {SIGPLAN Not.},
@@ -48,33 +24,8 @@
   address = {New York, NY, USA},
 }
 
-@inproceedings{guha07,
-  author = {Arjun Guha and Jacob Matthews and Robert Bruce Findler and Shriram Krishnamurthi},
-  title = {Relationally-parametric polymorphic contracts},
-  booktitle = {DLS '07: Proceedings of the 2007 symposium on Dynamic languages},
-  year = {2007},
-  isbn = {978-1-59593-868-8},
-  pages = {29--40},
-  location = {Montreal, Quebec, Canada},
-  doi = {http://doi.acm.org/10.1145/1297081.1297089},
-  publisher = {ACM},
-  address = {New York, NY, USA},
-}
-
-@inproceedings{henglein95,
-  author = {Fritz Henglein and Jakob Rehof},
-  title = {Safe polymorphic type inference for a dynamically typed language: translating Scheme to ML},
-  booktitle = {FPCA '95: Proceedings of the seventh international conference on Functional programming languages and computer architecture},
-  year = {1995},
-  isbn = {0-89791-719-7},
-  pages = {192--203},
-  location = {La Jolla, California, United States},
-  doi = {http://doi.acm.org/10.1145/224164.224203},
-  publisher = {ACM},
-  address = {New York, NY, USA},
-}
-
-@mastersthesis{kinghorn07,
+@mastersthesis{
+  kinghorn07,
   author = {David L. Kinghorn},
   title = {Preserving Parametricity While Sharing Higher-Order, Polymorphic Functions Between Scheme And ML},
   school = {California Polytechnic State University, San Luis Obispo},
@@ -82,7 +33,8 @@
   month = {June},
 }
 
-@article{matthews07,
+@article{
+  matthews07,
   author = {Jacob Matthews and Robert Bruce Findler},
   title = {Operational semantics for multi-language programs},
   journal = {SIGPLAN Not.},
@@ -96,39 +48,12 @@
   address = {New York, NY, USA},
 }
 
-@manual{microsoft07,
-  title = {Microsoft Interface Definition Language},
-  organization = {Microsoft},
-  month = {November},
-  year = {2007},
-}
-
-@manual{omg04,
-  title = {Common Object Request Broker Architecture (CORBA) Specification},
-  organization = {Object Management Group},
-  edition = {3.1},
-  month = {August},
-  year = {2004},
-}
-
-@book{pierce02,
+@book{
+  pierce02,
   author = {Benjamin C. Pierce},
   title = {Types and programming languages},
   year = {2002},
   isbn = {0-262-16209-1},
   publisher = {MIT Press},
   address = {Cambridge, MA, USA},
-}
-
-@inproceedings{tobin-hochstadt06,
-  author = {Sam Tobin-Hochstadt and Matthias Felleisen},
-  title = {Interlanguage migration: from scripts to programs},
-  booktitle = {OOPSLA '06: Companion to the 21st ACM SIGPLAN conference on Object-oriented programming systems, languages, and applications},
-  year = {2006},
-  isbn = {1-59593-491-X},
-  pages = {964--974},
-  location = {Portland, Oregon, USA},
-  doi = {http://doi.acm.org/10.1145/1176617.1176755},
-  publisher = {ACM},
-  address = {New York, NY, USA},
 }
