--- a/project.tex
+++ b/project.tex
@@ -29,6 +29,7 @@ Software components written in different programming languages can cooperate thr
 
 \clearpage
 
+\nocite{*}
 \bibliography{bibliography}
 \bibliographystyle{plain}
 
